force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/bofc__BOFCProcessFlowAnalyser__c.object-meta.xml
<CustomObject>
    <label>BOFCProcessFlowAnalyser</label>
    <nameField>
        <label>BOFCProcessAnalyser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCProcessFlowAnalyser</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>