force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>