force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__Full_Name_w_o_version__c.field-meta.xml
<CustomField>
    <fullName>bofc__Full_Name_w_o_version__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(bofc__Full_Name__c, &apos;-&apos;+ bofc__VerActiveNo__c , &apos;&apos;),&apos;bofc__&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name w/o version</label>
    <type>Text</type>
</CustomField>