force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__OName__c.field-meta.xml
<CustomField>
    <fullName>bofc__OName__c</fullName>
    <label>OName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>