force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__PDesc__c.field-meta.xml
<CustomField>
    <fullName>bofc__PDesc__c</fullName>
    <label>PDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>