force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__Plabel__c.field-meta.xml
<CustomField>
    <fullName>bofc__Plabel__c</fullName>
    <label>Plabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>