force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__Summary__c.field-meta.xml
<CustomField>
    <fullName>bofc__Summary__c</fullName>
    <label>Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>