force-app/main/default/objects/bofc__BOFCProcessFlowAnalyser__c/fields/bofc__Type__c.field-meta.xml
<CustomField>
    <fullName>bofc__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>